# rag-document-chat

./: .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  docker-compose.yml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  billing.py  conversations.py  documents.py  users.py
backend/app/domain/auth/: models.py  repository.py  schemas.py  service.py
backend/app/domain/billing/: models.py  repository.py  schemas.py  service.py
backend/app/domain/conversations/: models.py  repository.py  schemas.py  service.py
backend/app/domain/documents/: models.py  repository.py  schemas.py  service.py
backend/app/domain/rag/: chunker.py  pipeline.py  reranker.py  retriever.py  service.py
backend/app/domain/rag/chunkers/: __init__.py  base.py  hybrid.py  recursive.py  semantic.py
backend/app/domain/rag/embedders/: __init__.py  base.py  bge.py  openai.py  registry.py  voyage.py
backend/app/domain/rag/parsers/: __init__.py  base.py  doc.py  docx.py  epub.py  pdf.py  registry.py
backend/app/domain/rag/retrievers/: __init__.py  base.py  bm25.py  dense.py  hybrid.py
backend/app/domain/rag/stores/: __init__.py  base.py  pgvector.py  qdrant.py
backend/app/infrastructure/: database.py  llm.py  redis.py  storage.py  storage_local.py
backend/app/middleware/: logging.py  rate_limiting.py
backend/app/shared/: exceptions.py  pagination.py  utils.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: document_processing.py
backend/docker/: Dockerfile  Dockerfile.worker
backend/migrations/: env.py
backend/migrations/versions/: 84f6fcc3da48_add_notification_preferences_to_users.py  fa06dc1003d1_initial_schema.py
backend/scripts/: create_admin.py  create_initial_migration.sh  dev.sh  setup_local_services.sh
backend/tests/: conftest.py
backend/tests/unit/: test_billing_webhooks.py  test_chunkers.py  test_rrf_fusion.py  test_usage_limits.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/docker/: nginx.conf
frontend/src/: index.css  main.tsx
frontend/src/app/: providers.tsx  router.tsx
frontend/src/features/auth/: schemas.ts
frontend/src/shared/components/: LanguageSelector.tsx  ThemeToggle.tsx
(+61 files in other folders)
