[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docna-backend"
version = "0.1.0"
description = "Docna RAG SaaS backend"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.2",

    # Cache & Queue
    "redis[hiredis]>=5.0.8",
    "celery[redis]>=5.4.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",

    # Storage
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",

    # LLM & Embeddings
    "openai>=1.45.0",
    "anthropic>=0.34.0",
    "tiktoken>=0.7.0",

    # Document parsing
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    "markdown-it-py>=3.0.0",
    "chardet>=5.2.0",
    "mammoth>=1.8.0",
    "ebooklib>=0.18.0",

    # RAG — embedders
    "voyageai>=0.2.0",
    "sentence-transformers>=3.0.0",

    # RAG — vector store
    "qdrant-client>=1.11.0",

    # Observability
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "sentry-sdk[fastapi]>=2.14.0",

    # Validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",

    # Billing
    "stripe>=10.12.0",

    # Utilities
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "python-slugify>=8.0.4",
    "humanize>=4.10.0",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.1",
    "faker>=28.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]
